--- a/client/templates/views/presentation/home/main.html
+++ b/client/templates/views/presentation/home/main.html
@@ -12,7 +12,7 @@
                                          style="background-image:url('{{ masterPicture this}}')"></div>
                                     <span class="title">{{ masterFullName this}}</span>
                                     <span class="subtitle">You will shadow</span>
-                                    <span>{{ masterSkill this}}</span>
+                                    <span>{{ masterSkill this}}: {{ masterSkillDetails this}}: </span>
                                     <hr/>
                                     <span class="subtitle">by donating to</span><span>{{ masterCharity this}}</span>
                                     <button class="btn btn-block btn-lg btn-success top15 btn-place-bid">PLACE BID
